Add responses section in swagger for endpoints
