# controllers/signup.go
@@ -14,12 +14,17 @@ import (
 type SignUpController struct {
 	SignUpService domain.SignUpRepository
 }
+
 // @Summary 		Register User
 // @Description		register user with email and password and sending verfication email
 // @Tags			Auth
 // @Accept			json
 // @Router			/auth/signup/ [post]
 // @Param 			request body entity.Authenticate true "Register Data"
+// @Success			201		{object}	entity.LoginSignUpOkResponse
+// @Failure			400		{object}	entity.DataBodyResponse
+// @Failure			409		{object}	entity.UserExistResponse
+// @Failure			500		{object}	entity.DBErrorResponse
 func (s *SignUpController) SignUpHandler(ctx *gin.Context) {
 	var data entity.Authenticate
 
@@ -49,7 +54,7 @@ func (s *SignUpController) SignUpHandler(ctx *gin.Context) {
 	}
 
 	go s.SignUpService.SendVerifyEmail(data.Email)
-	
+
 	accessToken := s.SignUpService.CreateAccessToken(newUser.ID.String(), data.Email)
 	ctx.JSON(http.StatusCreated, gin.H{"access_token": accessToken})
 }
